--- a/ch1/hint/templates/hint/theme_detail.html
+++ b/ch1/hint/templates/hint/theme_detail.html
@@ -61,7 +61,7 @@ var count = 0;
 function input(){
     var input = document.getElementById("input").value; 
     temp = input;
-    if (temp == "CD38"){
+    if (temp == "DB38"){
         audio1.play();
     }
     if (temp == "DA60"){
