--- a/ch1/hint/templates/hint/main.html
+++ b/ch1/hint/templates/hint/main.html
@@ -1,18 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<script>
-    var password = "{{ q }}";
-    {% for i in roomescape %}
-    if (password == "{{ i.password }}" ){
-        location.href="{% url 'hint:theme_list' i.name %}"
-    }
-    else {
-        $(function(){
-          $('#not').text('비밀번호가 일치하지 않습니다.');
-        });
-    }
-    {% endfor %}
-</script>
+
 <style>
     body{
         background-color:green;
@@ -24,10 +12,26 @@
             {% csrf_token %}
             <input name="q" value="{{ q }}" id="pw" class="form-control" type="search" placeholder="비밀번호를 입력해주세요">
         </form>
-        <h3 id="not"></h3>
+        <h3 id="not">비밀번호를 입력해주세요.</h3>
     </div>
 </div>
 
-
+<script>
+    var password = "{{ q }}";
+    {% for i in roomescape %}
+    if (password == ""){
+        pass
+    }else{
+        if (password == "{{ i.password }}" ){
+            location.href="{% url 'hint:theme_list' i.name %}"
+        }
+        else {
+            $(function(){
+              $('#not').text('비밀번호가 일치하지 않습니다.');
+            });
+        }
+    }
+    {% endfor %}
+</script>
 
 {% endblock %}
