--- a/ch1/hint/templates/hint/theme_detail.html
+++ b/ch1/hint/templates/hint/theme_detail.html
@@ -11,7 +11,7 @@
     </form>
     <h1 class="text-center">HINT COUNT</h1>
     <h2 class="text-center" id="hintCount">0</h2>
-    <h3 class="text-center" id="codeList">a</h3>
+    <h3 class="text-center" id="codeList"></h3>
     {% if theme.hint1 %}
     <audio id="audio1" src="{{ theme.hint1.url }}"></audio>
     {% endif %}
