--- a/ch1/hint/templates/hint/reset_code.html
+++ b/ch1/hint/templates/hint/reset_code.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<style>
-    body{
-        background-color:green;
-    }
-</style>
+
 <div class="container mt-5">
     <div class="text-center mt-5">
         <form action="" method="get">
@@ -17,7 +13,7 @@
 
 <script>
     var reset_code = "{{ q }}";
-    var url = "{% url 'hint:theme_detail' roomescape.name theme %}";
+    var url = "{% url 'hint:QR_code' %}";
     if (reset_code == ""){
         pass
     }else{
