--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -12,7 +12,7 @@
            onchange="openQRCamera(this);" tabindex=-1>
 </label>
 <input type=button value="Go" disabled>
-
+<script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
     function openQRCamera(node) {
       var reader = new FileReader();
