--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -1,17 +1,39 @@
+{% extends 'base.html' %}
+{% block content %}
 <style>
-    body, input {font-size:14pt}
-    input, label {vertical-align:middle}
-    .qrcode-text {padding-right:1.7em; margin-right:0}
-    .qrcode-text-btn {display:inline-block; background:url(//dab1nmslvvntp.cloudfront.net/wp-content/uploads/2017/07/1499401426qr_icon.svg) 50% 50% no-repeat; height:1em; width:1.7em; margin-left:-1.7em; cursor:pointer}
-    .qrcode-text-btn > input[type=file] {position:absolute; overflow:hidden; width:1px; height:1px; opacity:0}
+    body, input {
+        font-size:14pt
+    }
+    input, label {
+        vertical-align:middle
+    }
+    .qrcode-text {
+        padding-right:1.7em; margin-right:0
+    }
+    .qrcode-text-btn {
+        display:inline-block; background:url(//dab1nmslvvntp.cloudfront.net/wp-content/uploads/2017/07/1499401426qr_icon.svg) 50% 50% no-repeat; height:10em; width:17em; cursor:pointer
+    }
+    #g {
+        position:absolute; overflow:hidden; width:1px; height:1px; opacity:0
+    }
 </style>
+<div style="height:100px"></div>
+<div class="container text-center my-5">
+    <input id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
+    <label class="qrcode-text-btn">
+        <input id="g" type=file accept="image/*" capture="environment"
+               onchange="openQRCamera(this);" tabindex=-1>
+    </label>
+    <div class="row mt-3">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <button style="border-color:black" class="form-control btn btn-default" onclick="url();" type="button">힌트 사용</button>
+        </div>
+        <div class="col-2"></div>
+    </div>
+</div>
 
-<input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
-<label class=qrcode-text-btn>
-    <input type=file accept="image/*" capture=environment onclick="return showQRIntro();"
-           onchange="openQRCamera(this);" tabindex=-1>
-</label>
-<input type=button value="Go" disabled>
+
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
     function openQRCamera(node) {
@@ -29,8 +51,17 @@
       };
       reader.readAsDataURL(node.files[0]);
     }
-
-    function showQRIntro() {
-      return confirm("Use your camera to take a picture of a QR code.");
+    //function showQRIntro() {
+      //return confirm("Use your camera to take a picture of a QR code.");
+    //}
+    function url(){
+        var value = $('#text').val();
+        if (value == ""){
+            pass
+        }else{
+            location.replace(value);
+        }
     }
 </script>
+
+{% endblock %}
