--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -17,7 +17,7 @@
         position:absolute; overflow:hidden; width:1px; height:1px; opacity:0
     }
 </style>
-<div style="height:100px"></div>
+<div style="height:80px"></div>
 <div class="container text-center my-5">
     <input style="visibility:hidden;" id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
     <label class="qrcode-text-btn">
@@ -28,6 +28,7 @@
         <div class="col-2"></div>
         <div class="col-8">
             <button style="border-color:black" class="form-control btn btn-default" onclick="url();" type="button">힌트 사용</button>
+            <h3 class="my-4">HINT COUNT</h3>
         </div>
         <div class="col-2"></div>
     </div>
