--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -17,18 +17,23 @@
         position:absolute; overflow:hidden; width:1px; height:1px; opacity:0
     }
 </style>
-<div style="height:80px"></div>
+<div style="height:50px"></div>
 <div class="container text-center my-5">
+    <h2>{{ theme }}</h2>
     <input style="visibility:hidden;" id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
     <label class="qrcode-text-btn">
-        <input id="g" type=file accept="image/*" capture="environment"
-               onchange="openQRCamera(this);" tabindex=-1>
+        <input id="g" type=file accept="image/*" capture="environment" onchange="openQRCamera(this);" tabindex=-1>
     </label>
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
-            <button style="border-color:black" class="form-control btn btn-default" onclick="url();" type="button">힌트 사용</button>
-            <h3 class="my-4">HINT COUNT</h3>
+            <form action="" method="get">
+                {% csrf_token %}
+                <button style="border-color:black" class="form-control btn btn-default" onclick="url();" type="submit">힌트 사용</button>
+                <h3 class="mt-4 mb-2">HINT COUNT</h3>
+                <h4 class="m-0">{{ count }}</h4>
+                <input style="visibility:hidden;" id="input" name="q" value="{{ q }}" type="text">
+            </form>
         </div>
         <div class="col-2"></div>
     </div>
@@ -58,12 +63,17 @@
     //}
     function url(){
         var value = $('#text').val();
+        document.getElementById("input").value=value;
         if (value == ""){
             alert("QR 코드를 입력하세요.");
         }else{
             location.href=value;
         }
     }
+    history.pushState(null, null, location.href);
+        window.onpopstate = function () {
+            history.go(1);
+    };
 </script>
 
 {% endblock %}
