--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -10,6 +10,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
+    <style>
+        body{
+            background-color:black;
+        }
+    </style>
     <body>
         {% block content %}
         {% endblock %}
