--- a/ch1/accounts/templates/accounts/login.html
+++ b/ch1/accounts/templates/accounts/login.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<style>
+    body{
+        background-color:black;
+    }
+    input::placeholder {
+        color: white;
+    }
+</style>
 
 <div class="container text-center">
     <div style="height:120px"></div>
-    <img class="my-3" width="130px" src="{% static 'account.png' %}">
+    <img class="my-3" width="130px" src="{% static 'accounts1.png' %}">
     <div class="row">
         <div class="col-1"></div>
         <div class="col-10">
@@ -12,11 +20,37 @@
                 {% csrf_token %}
                 {{ form.username }}
                 {{ form.password }}
-                <button class="form-control btn btn-default mt-3" style="border-color: black" type="submit">로그인</button>
+                <button class="form-control btn btn-default mt-3" style="border-color: white" type="submit"><span style="color:white">LOGIN</span></button>
+                <button class="form-control btn btn-default mt-2" data-target="#myModal" data-toggle="modal" style="border-color: white" type="button"><span style="color:white">SEARCH</span></button>
+                <div class="modal" id="myModal">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+
+                      <!-- Modal Header -->
+                      <div class="modal-header">
+                        <h4 class="modal-title">Connect</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      </div>
+
+                      <!-- Modal body -->
+                      <div class="modal-body">
+                          <strong>Email</strong> : bizchoollab@naver.com<br>
+                          <strong>Phone</strong> : 010-3968-3572
+                      </div>
+
+                      <!-- Modal footer -->
+                      <div class="modal-footer">
+                        <button type="button" class="btn" data-dismiss="modal">Close</button>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
             </form>
         </div>
         <div class="col-1"></div>
     </div>
+
 </div>
 
 {% endblock %}
