--- a/ch1/hint/templates/hint/theme_list.html
+++ b/ch1/hint/templates/hint/theme_list.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
 
+</style>
 <div class="container mt-5">
     <div class="text-center mt-5">
-        <h1 class="m-5">{{ escape_room }}</h1>
-        {% for i in themes %}
-        <div style="position:relative;">
-            <a style="color:black; text-decoration:none;" href="{% url 'hint:reset_code' user_id i.name %}"><h2 class="m-3">{{ i.name }}</h2></a>
-            <a style="text-decoration:none;color:black;position:absolute;right:0;bottom:0" href="{% url 'hint:theme_edit' user_id i.name %}"><span>수정</span></a>
+        <h4 class="mt-5">{{ escape_room }}</h4>
+        <h3 class="mt-1 mb-5">테마선택</h3>
+        <div class="row">
+            {% for i in themes %}
+            <div class="col-6 mt-5">
+                <a style="color:black; text-decoration:none;color:white;" href="{% url 'hint:QR_code' user_id i.name %}"><h3 class="mb-0">{{ i.name }}</h3></a>
+                <a style="text-decoration:none;color:white" href="{% url 'hint:theme_edit' user_id i.name %}"><span>수정</span></a>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+
     </div>
 </div>
 
