--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -41,10 +41,10 @@
         <div class="col-2"></div>
     </div>
 </div>
-<button style="position:fixed;bottom:20px;left:20px;" type="button" onclick="location.href='{% url 'hint:reset_code' user_id theme %}'">
+<button style="position:fixed;bottom:20px;left:20px;background-color:black;border-color:black" type="button" onclick="location.href='{% url 'hint:reset_code' user_id theme %}'">
     <img width="35px;" src="{% static  'reset1.png' %}">
 </button>
-<button data-target="#myModal" data-toggle="modal" style="position:fixed;bottom:20px;right:20px;" type="button">
+<button data-target="#myModal" data-toggle="modal" style="position:fixed;bottom:20px;right:20px;background-color:black;border-color:black" type="button">
     <img width="35px;" src="{% static  'question.png' %}">
 </button>
 <div class="modal" id="myModal">
@@ -66,7 +66,7 @@
             3. 힌트사용 버튼을 클릭합니다.<br>
               <br>
               힌트폰 사용안내<br>
-            1. 최대 5회까지만 사용이 가능합니다.<br>
+            1. 최대 {{ hintCount }}회까지만 사용이 가능합니다.<br>
             2. 반복 된 힌트는 연속 재생이 가능합니다.(No Count)<br>
           </p>
       </div>
