--- a/ch1/hint/templates/hint/reset_code.html
+++ b/ch1/hint/templates/hint/reset_code.html
@@ -5,6 +5,12 @@
         color: white;
     }
 </style>
+<script>
+    history.pushState(null, null, location.href);
+        window.onpopstate = function () {
+            history.go(1);
+    };
+</script>
 
 <div class="container mt-5">
     <div style="height:50px"></div>
@@ -18,6 +24,7 @@
                 <input style="outline:0;color:white;border-color: black;width:100%;background-color:black;box-shadow: 0 2px 0 0 white;" name="q" value="{{ q }}" id="pw" type="password" placeholder="Reset Code를 입력해주세요">
                 <button type="submit" class="form-control btn btn-default mt-4" style="border-color: white;color:white">ENTER</button>
             </form>
+            <button type="button" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'" class="form-control btn btn-default mt-2" style="border-color: white;color:white">관리자 아닐시 돌아가기</button>
             <h3 id="not"></h3>
         </div>
     </div>
@@ -27,7 +34,6 @@
     var reset_code = "{{ q }}";
     var url = "{% url 'hint:QR_code' user_id theme %}";
     if (reset_code == ""){
-        pass
     }else{
         if (reset_code == "{{ reset }}" ){
             location.href=url;
