--- a/ch1/hint/templates/hint/reset_code.html
+++ b/ch1/hint/templates/hint/reset_code.html
@@ -13,7 +13,7 @@
 </script>
 
 <div class="container mt-5">
-    <div style="height:50px"></div>
+    <div style="height:20px"></div>
     <div class="text-center mt-5">
         <span style="color:white">{{ escape_room }}</span>
         <h1 style="color:white">{{ theme }}</h1>
@@ -24,7 +24,7 @@
                 <input style="outline:0;color:white;border-color: black;width:100%;background-color:black;box-shadow: 0 2px 0 0 white;" name="q" value="{{ q }}" id="pw" type="password" placeholder="Reset Code를 입력해주세요">
                 <button type="submit" class="form-control btn btn-default mt-4" style="border-color: white;color:white">ENTER</button>
             </form>
-            <button type="button" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'" class="form-control btn btn-default mt-2" style="border-color: white;color:white">관리자 아닐시 돌아가기</button>
+            <button type="button" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'" class="form-control btn btn-default mt-2" style="border-color: white;color:white">관리자가 아닐시 돌아가기</button>
             <h3 id="not"></h3>
         </div>
     </div>
