--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -109,7 +109,7 @@
 </div>
 
 <div class="text-center">
-    <button style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'">힌트 사용하러가기</button>
+    <button style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'">다른 힌트 사용하러가기</button>
 </div>
 <script>
     history.pushState(null, null, location.href);
